# Allo

./: .env  Cargo.toml  askama.toml  crm.rs
migrations/: 001_create_tables.sql  002_add_rbac_fixed.sql  003_add_sessions.sql  004_add_deal_activity_permissions.sql  005_add_expenses.sql  006_seed_expense_categories.sql  007_add_inventory_tables.sql  008_seed_inventory_roles_and_permissions.sql  009_expand_items_table.sql
src/: database.rs  filters.rs  main.rs
src/handlers/: activities.rs  api.rs  auth.rs  crm.rs  dashboard.rs  deals.rs  expenses.rs  inventory.rs  mod.rs  reports.rs  team.rs
src/middleware/: mod.rs  permission.rs
src/models/: crm.rs  expense.rs  inventory.rs  mod.rs  rbac.rs  role.rs  user.rs
src/utils/: auth.rs  mod.rs  password.rs
static/: style.css
templates/: base.html  dashboard.html  login.html  register.html
templates/crm/: activities.html  activity_form.html  contact_edit.html  customer_detail.html  customer_form.html  customers.html  dashboard.html  deal_detail.html  deal_form.html  deals.html  reports.html
templates/expenses/: expense_form.html  expenses.html
templates/inventory/: item_form.html  items.html  stock_movements.html  warehouses.html
templates/team/: dashboard.html  role_form.html  roles.html  user_form.html  users.html
