[package]
name = "allo"
version = "0.1.0"
edition = "2021"
authors = ["HABB Corp <andrew.davis@habb.tech>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower-cookies = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
dotenvy = "0.15"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
env_logger = "0.10"
rust_decimal = { version = "1.0", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }